--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@
 // @import 'https://unpkg.com/bootstrap@latest/dist/css/bootstrap.min.css';
 // @import 'external/bootstrap.css';
 @import 'variables.css';
-@import 'app.css';
+@import 'main.css';
 @import 'sizes.css';
 @import 'colors.css';
 @import 'animations.css';
