--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -67,6 +67,10 @@ input {
   background-color: currentColor;
 }
 
+.bg-inherit {
+  background-color: inherit;
+}
+
 .inactive {
   color: #bcbccb;
 }
