--- a/src/styles/helper/owl.carousel.scss
+++ b/src/styles/helper/owl.carousel.scss
@@ -7,8 +7,8 @@
 }
 
 .owl-carousel.fullwidth .owl-stage {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .carousel .carousel-item {
@@ -26,15 +26,14 @@
 }
 
 .owl-carousel {
-
   .owl-stage {
-    /* padding-left: 0 !important; */
+    /* padding-left: 0; */
     display: flex;
   }
 
   .owl-item {
     padding-left: 0.25rem;
-    // min-height: 6rem !important;
+    // min-height: 6rem;
 
     .flex-card {
       border-radius: 0.75rem;
@@ -84,7 +83,7 @@
         opacity: 1;
       }
 
-      &+.owl-dot {
+      & + .owl-dot {
         margin-left: 0.5rem;
       }
     }
